# yt-video-summarizer

./: .gitignore  Dockerfile  cli.py  package.json  pyproject.toml  requirements.txt  vercel.json
src/: app.py  db.py
src/models/: user.py
src/static/: output.css
src/templates/: base.html  index.html
src/utils/: __init__.py  gemini.py  general.py  oauth.py  youtube.py
