[project]
name = "yt-video-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.12.0",
    "fastapi[standard]>=0.128.0",
    "google-genai>=1.55.0",
    "python-dotenv>=1.2.1",
    "youtube-transcript-api>=1.2.3",
]
